chore: change GenericResponse to use generics instead any type
